--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         </g>
                     </g>
                 </svg>
-                <h1>open-JAD</h1>
+                <h1>open-JAD webfind</h1>
             </div>
             <button class="language-switch" id="languageSwitch">EN | 中文</button>
         </div>
